--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
-
+logo: /assets/img/logo.png
+description: Jose Ng, Software Engineer | Cloud Advocate | Big Data Engineer | ML enthusiast | Techpreneur.
