--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
+title: Jose Ng
 logo: /assets/img/logo.png
-description: Jose Ng, Software Engineer | Cloud Advocate | Big Data Engineer | ML enthusiast | Techpreneur.
+description: Software Engineer | Cloud Advocate | Big Data Engineer | ML enthusiast | Techpreneur.
